# rubik

./: README.md  pyproject.toml
src/rubik/: bfs.py  bi_bfs.py  bi_ids.py  cube.py  cubie_cube.py  ids.py  main.py  rubik.py  utils.py
src/rubik/animation/: manim_rubik.py
src/rubik/kociemba/: README.md  coord.py  cubie.py  defs.py  kociemba.py  moves.py  pruning.py  solver.py  solver2.py
tests/: cube.py  test_cube.py  test_cubie.py
