[project]
name = "rubik"
version = "0.1.0"
description = "A collection of algorithms for solving Rubik's Cubes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["lehmer>=0.1.4", "numpy>=2.3.3", "rich>=14.2.0"]

[project.scripts]
rubik = "rubik.main:main"
kociemba = "rubik.kociemba.kociemba:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]
extra = ["manim>=0.19.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E741"]
